[gd_scene load_steps=16 format=3 uid="uid://2dgp28b8iovt"]

[ext_resource type="Script" uid="uid://cwhd4lrqxasp1" path="res://mining_minigame/mining_surface.gd" id="1_6mp2c"]
[ext_resource type="Script" uid="uid://bi4owgc8jr20j" path="res://mining_minigame/treasure_layer.gd" id="2_2hgpp"]
[ext_resource type="Script" uid="uid://ndbehjn1vho4" path="res://utils/target_scale_camera.gd" id="2_3k3h2"]
[ext_resource type="TileSet" uid="uid://du2id2ifa053t" path="res://resources/tile_sets/treasure_tile_set.tres" id="2_8le4i"]
[ext_resource type="Texture2D" uid="uid://d3igihd7r4d6p" path="res://assets/[Anokolisa] Pixel Crawler - Free Pack 2.0.3/Environment/Tilesets/Wall_Tiles.png" id="2_xclyh"]
[ext_resource type="Texture2D" uid="uid://muyl2pahn5b7" path="res://assets/[Anokolisa] Pixel Crawler - Free Pack 2.0.3/Environment/Tilesets/Cave_Tiles - WIP.png" id="3_3teyd"]
[ext_resource type="Script" uid="uid://c3erog0324bhd" path="res://mining_minigame/mining_background.gd" id="4_1gsxp"]
[ext_resource type="Resource" uid="uid://b73wtuhvfar42" path="res://resources/treasure/treasure_collection.tres" id="4_6wunb"]
[ext_resource type="Script" uid="uid://2fthrq3wdxlh" path="res://mining_minigame/mining_surface_tile_map.gd" id="5_ojwpm"]
[ext_resource type="Texture2D" uid="uid://dnm5vvrl2bf4h" path="res://assets/mining_surface.png" id="5_wyqvg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1u4le"]
texture = ExtResource("2_xclyh")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hfx3w"]
texture = ExtResource("3_3teyd")
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
7:0/0 = 0
10:0/0 = 0
13:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
10:2/0 = 0
13:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
12:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
5:14/0 = 0
7:14/0 = 0
8:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
5:16/0 = 0

[sub_resource type="TileSet" id="TileSet_03x4r"]
sources/0 = SubResource("TileSetAtlasSource_1u4le")
sources/1 = SubResource("TileSetAtlasSource_hfx3w")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6ijmc"]
texture = ExtResource("5_wyqvg")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ls6lc"]
sources/1 = SubResource("TileSetAtlasSource_6ijmc")

[node name="MiningSurface" type="SubViewportContainer" node_paths=PackedStringArray("_camera", "_mining_surface_tile_map", "_treasure_tile_map", "_mining_background_tile_map")]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
stretch = true
script = ExtResource("1_6mp2c")
map_target_rect = Rect2i(0, 0, 8, 6)
_camera = NodePath("SubViewport/Camera2D")
_mining_surface_tile_map = NodePath("SubViewport/MiningSurfaceTileMap")
_treasure_tile_map = NodePath("SubViewport/TreasureTileMap")
_mining_background_tile_map = NodePath("SubViewport/MiningBackgroundTileMap")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="MiningBackgroundTileMap" type="TileMapLayer" parent="SubViewport"]
texture_filter = 1
tile_set = SubResource("TileSet_03x4r")
script = ExtResource("4_1gsxp")
border_tile_atlas_coord = Vector2i(2, 7)
background_tile_source_id = 1
background_tile_atlas_coord = Vector2i(13, 1)

[node name="TreasureTileMap" type="TileMapLayer" parent="SubViewport"]
texture_filter = 1
tile_set = ExtResource("2_8le4i")
script = ExtResource("2_2hgpp")
treasure_collection = ExtResource("4_6wunb")

[node name="MiningSurfaceTileMap" type="TileMapLayer" parent="SubViewport"]
texture_filter = 1
tile_set = SubResource("TileSet_ls6lc")
script = ExtResource("5_ojwpm")
mining_stage_tiles = Array[Vector2i]([Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)])

[node name="Camera2D" type="Camera2D" parent="SubViewport"]
texture_filter = 1
script = ExtResource("2_3k3h2")

[connection signal="mine" from="SubViewport/MiningSurfaceTileMap" to="." method="_on_mine"]
